--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
 
   <body>
-    <h1>Now displaying: <span id="url">Nothing</span></h1>
+    <!-- <h1>Now displaying: <span id="url">Nothing</span></h1> -->
     <iframe id="frame" src="" width="1080" height="720"></iframe>
-    <button id="cycle">Cycle</button>
+    <!-- <button id="cycle">Cycle</button> -->
 
     <script type="text/javascript">
-      var urlArray = ['https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/ConversionandAutomationMetrics?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/BOTFlowsTrackingV2?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/CSATFlow?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/AgentHandoff?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/UsersLastAction?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/1_CompanyKPI?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/2_CampaignBreakdown?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/2_BuyingDropoffChart?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/3_BuyingDropoffTable?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/2_RevenueBreakdown?:iid=1'];
+      var urlArray = ['https://google.com','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/ConversionandAutomationMetrics?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/BOTFlowsTrackingV2?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/CSATFlow?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/AgentHandoff?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/UsersLastAction?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/1_CompanyKPI?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/2_CampaignBreakdown?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/2_BuyingDropoffChart?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/3_BuyingDropoffTable?:iid=1','https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/2_RevenueBreakdown?:iid=1'];
       var count = -1;
       var i = document.getElementById('frame');
       // var c = document.getElementById('cycle');
@@ -38,7 +38,7 @@
       setInterval(()=>{
         console.log("set interval ran");
         setUrl()
-      },150000)
+      },10000)
 
       // c.onclick = function(){
       //   c.disabled = true;
