--- a/index.html
+++ b/index.html
@@ -21,70 +21,56 @@
         let websites  = [
             {
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/ConversionandAutomationMetrics?:iid=1",
-                seconds: 150000
+                seconds: 120000
             },
-
             {
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/BOTFlowsTrackingV2?:iid=1",
-                seconds: 150000
+                seconds: 120000
             },
-
             {
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/CSATFlow?:iid=1",
-                seconds: 150000
+                seconds: 120000
             },
-
             { 
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/AgentHandoff?:iid=1",
                 seconds: 150000
             },
-
             {
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/BOTFlowsTrackingDB/UsersLastAction?:iid=1",
-                seconds: 150000
+                seconds: 120000
             },
-
             {
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/1_CompanyKPI?:iid=1",
-                seconds: 150000
+                seconds: 120000
             },
-
             {
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/2_CampaignBreakdown?:iid=1",
-                seconds: 150000
+                seconds: 120000
             },
-
             {
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/2_BuyingDropoffChart?:iid=1",
-                seconds: 150000
+                seconds: 120000
             },
-
             {
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/3_BuyingDropoffTable?:iid=1",
-                seconds: 150000
+                seconds: 120000
             },
-
             {
                 url: "https://prod-apnortheast-a.online.tableau.com/#/site/limechat/views/CompanyWideDB/2_RevenueBreakdown?:iid=1",
-                seconds: 150000
+                seconds: 120000
             }
         ];
-
         let i = 0;
         while (i < websites.length) {
             console.log(websites[i]);
             
             await setTimeoutPromise(window.open(websites[i].url, "_blank"), websites[i].seconds);
             i++;
-            if (i >= websites.length) {
-                i = 0;
-            }
         }
-    }())
-
+	    window.location.reload();
+    }());
     // Call the function to start opening and closing tabs
     // openCloseTabs();
 </script>
-
 </body>
 </html>
